feat: resource changelog tracking & API (#252)
* feat: add resource changelog API service & repo

* feat: unit test for service

* feat: move to a separate service

* feat: add handler & proto

* feat: reorganize functions & track resource updates

* feat: fix metric counter & fix job changelog query

* feat: skip when there's no changes

* feat: update queries structure

* feat: fix query & handler function name

* fix: handler naming

* feat: update on code review

* feat: remove sorting from get query

* fix: lint

* feat: update proton commit
