# protos/gotocompany/optimus/core/v1beta1/resource.swagger.json
@@ -444,6 +444,43 @@
           "ResourceService"
         ]
       }
+    },
+    "/v1beta1/project/{projectName}/resource/{resourceName}/changelog": {
+      "get": {
+        "summary": "GetResourceChangelogs get all the change logs for a specific resource",
+        "operationId": "ResourceService_GetResourceChangelogs",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1beta1GetResourceChangelogsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "projectName",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "resourceName",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "ResourceService"
+        ]
+      }
     }
   },
   "definitions": {
@@ -557,6 +594,17 @@
         }
       }
     },
+    "v1beta1GetResourceChangelogsResponse": {
+      "type": "object",
+      "properties": {
+        "history": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1beta1ResourceChangelog"
+          }
+        }
+      }
+    },
     "v1beta1Level": {
       "type": "string",
       "enum": [
@@ -603,6 +651,34 @@
         },
         "resource": {
           "$ref": "#/definitions/v1beta1ResourceSpecification"
+        }
+      }
+    },
+    "v1beta1ResourceChange": {
+      "type": "object",
+      "properties": {
+        "attributeName": {
+          "type": "string"
+        },
+        "diff": {
+          "type": "string"
+        }
+      }
+    },
+    "v1beta1ResourceChangelog": {
+      "type": "object",
+      "properties": {
+        "eventType": {
+          "type": "string"
+        },
+        "timestamp": {
+          "type": "string"
+        },
+        "change": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1beta1ResourceChange"
+          }
         }
       }
     },
